# g13-suite

./: CLAUDE.md  Cargo.toml  README.md
g13-config/: Cargo.toml
g13-config-ui/: Cargo.toml
g13-config-ui/assets/: index.html
g13-config-ui/src/: main.rs
g13-config/src/: backlight.rs  lib.rs
g13-gui/: Cargo.toml
g13-gui/src/: main.rs
g13d/: Cargo.toml
g13d/src/: keypad.rs  keys.rs  lcd.rs  main.rs  thumbstick.rs
